--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "kintone query builder and parser",
   "main": "./dist/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "testWithCoverage": "jest --coverage"
   },
   "keywords": [
     "kintone"
@@ -12,8 +13,11 @@
   "author": "toyokumo",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^24.0.17",
     "gulp": "^4.0.0",
     "gulp-typescript": "^5.0.1",
+    "jest": "^24.8.0",
+    "ts-jest": "^24.0.2",
     "typescript": "^3.5.3"
   }
 }
