--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
     "files": [
         "src/main.ts",
-	"src/greet.ts"
+	"src/tokenizer.ts"
     ],
     "compilerOptions": {
         "noImplicitAny": true,
-        "target": "es2015",
+        "target": "es2016",
 	"esModuleInterop": true,
 	"strict": true,
 	"module": "commonjs"
