use new token definition

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "files": [
         "src/main.ts",
 	"src/tokenizer.ts",
-//	"src/parser.ts",
+	"src/parser.ts",
     ],
     "compilerOptions": {
         "noImplicitAny": true,
