--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,14 @@
 {
   "files": [
-    "src/*.ts"
+    "src/kintone-query-buffer-element.ts",
+    "src/kintone-query-buffer-interface.ts",
+    "src/kintone-query-buffer.ts",
+    "src/kintone-query-builder.ts",
+    "src/kintone-query-error.ts",
+    "src/kintone-query-expr.ts",
+    "src/main.ts",
+    "src/parser.ts",
+    "src/tokenizer.ts"
   ],
   "compilerOptions": {
     "noImplicitAny": true,
