Add tests for parser

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,11 @@
     "src/kintone-query-error.ts",
     "src/kintone-query-expr.ts",
     "src/kintone-query-parser.ts",
-    "src/parser/*",
+    "src/parser/conditions-parser.ts",
+    "src/parser/limit-parser.ts",
+    "src/parser/offset-parser.ts",
+    "src/parser/order-by-parser.ts",
+    "src/parser/parser-interface.ts",
     "src/main.ts",
     "src/parser.ts",
     "src/tokenizer.ts"
