--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "testWithCoverage": "jest --coverage",
-    "tokenizerTest": "jest tokenizer"
+    "tokenizerTest": "jest tokenizer",
+    "lint": "eslint src tests --ext .ts"
   },
   "keywords": [
     "kintone"
@@ -15,9 +16,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^24.0.17",
+    "@typescript-eslint/eslint-plugin": "^2.13.0",
+    "@typescript-eslint/parser": "^2.13.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "gulp": "^4.0.0",
     "gulp-typescript": "^5.0.1",
     "jest": "^24.8.0",
+    "prettier": "^1.19.1",
     "ts-jest": "^24.0.2",
     "typescript": "^3.7.4"
   },
