--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,7 @@
     "src/parser/offset-parser.ts",
     "src/parser/order-by-parser.ts",
     "src/parser/parser-interface.ts",
-    "src/main.ts",
-    "src/parser.ts",
-    "src/tokenizer.ts"
+    "src/main.ts"
   ],
   "compilerOptions": {
     "noImplicitAny": true,
