--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,9 @@ jobs:
           paths:
             - ./node_modules
       - run:
+          name: lint
+          command: npm run lint
+      - run:
           name: test
           command: npm test
       - run:
