add postpublish logout to avoid some kind of sadness
https://qiita.com/sadnessOjisan/items/3069e79038c961458ba2

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "testWithCoverage": "jest --coverage",
     "lint": "eslint src tests --ext .ts",
     "lint:fix": "eslint src tests --ext .ts --fix",
-    "prepublish": "rm -rf dist/ && npm run-script build"
+    "prepublish": "rm -rf dist/ && npm run-script build",
+    "postpublish": "npm logout"
   },
   "keywords": [
     "kintone"
