Revert "add postpublish logout to avoid some kind of sadness"
This reverts commit c1e05e85cd5eae37c510931f7b5469f72438afbd.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "testWithCoverage": "jest --coverage",
     "lint": "eslint src tests --ext .ts",
     "lint:fix": "eslint src tests --ext .ts --fix",
-    "prepublish": "rm -rf dist/ && npm run-script build",
-    "postpublish": "npm logout"
+    "prepublish": "rm -rf dist/ && npm run-script build"
   },
   "keywords": [
     "kintone"
