--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
-version: 2
+version: 2.1
+orbs:
+  slack: circleci/slack@3.4.2
 
 defaults: &defaults
   working_directory: ~/repo
@@ -27,6 +29,7 @@ jobs:
       - persist_to_workspace:
           root: ~/repo
           paths: .
+      - slack/status
   deploy:
     <<: *defaults
     steps:
@@ -41,6 +44,7 @@ jobs:
       - run:
           name: Publish package
           command: npm publish
+      - slack/status
 
 workflows:
   version: 2
