--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
       - persist_to_workspace:
           root: ~/repo
           paths: .
+      - run: exit 1
       - slack/status
   deploy:
     <<: *defaults
