--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "test": "jest",
     "testWithCoverage": "jest --coverage",
     "lint": "eslint src tests --ext .ts",
-    "lint:fix": "eslint src tests --ext .ts --fix"
+    "format": "run-s \"format:eslint -- {1}\" \"format:prettier -- {1}\" --",
+    "format:eslint": "eslint --fix",
+    "format:prettier": "prettier --write",
+    "format-all": "npm run format \"./**/*.ts\"",
+    "format-all:eslint": "eslint --fix \"./**/*.ts\"",
+    "format-all:prettier": "prettier --write \"./**/*.ts\""
   },
   "keywords": [
     "kintone"
@@ -24,18 +29,18 @@
   "author": "toyokumo",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/jest": "^24.9.0",
-    "@typescript-eslint/eslint-plugin": "^2.17.0",
-    "@typescript-eslint/parser": "^2.17.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^24.9.0",
-    "prettier": "^1.19.1",
-    "ts-jest": "^24.3.0",
-    "typescript": "^3.7.5"
+    "@toyokumo/eslint-config": "^1.0.8",
+    "@toyokumo/prettier-config": "^1.0.1",
+    "@types/jest": "^24.9.1",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "eslint": "^7.23.0",
+    "jest": "^26.6.3",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.2.1",
+    "ts-jest": "^26.5.4",
+    "typescript": "^4.2.4"
   },
   "dependencies": {
-    "ebnf": "^1.8.0"
+    "ebnf": "^1.9.0"
   }
 }
