--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
     }
   ],
   "rules": {
-    "@typescript-eslint/consistent-type-imports": ["error"]
+    "@typescript-eslint/consistent-type-imports": ["error"],
+    "class-methods-use-this": "off"
   }
 }
