--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest",
     "testWithCoverage": "jest --coverage",
     "lint": "eslint src tests --ext .ts",
+    "postlint": "prettier -c \"./**/*.ts\"",
     "format": "run-s \"format:eslint -- {1}\" \"format:prettier -- {1}\" --",
     "format:eslint": "eslint --fix",
     "format:prettier": "prettier --write",
